# spot-checker

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_workloads_parallel.sh  settings.sh  spot-health-checker.py  workload_sampling.py
aws/: README.md  requirements.txt  run_workloads_parallel.sh  spot-health-checker.py  workload_sampling.py
aws/data/: region_ami_dict.pkl  workloads_10.txt
aws/spot-dingdongditch/: lambda_function.py  run_workloads_parallel.sh  settings.sh  slack_msg_sender.py  spot-dingdongditch.py  workload_sampling.py
azure/: README.md  conf.py  run_workloads_parallels.sh  settings.sh  spot-health-checker.py  workload.txt
data/: workloads_10.txt
gcp/: README.md  run_workloads_parallels.sh  settings.sh  spot-health-checker.py  workload.txt
multinode_ondemand_checker/: create_log_group.py  create_ondemand_tester.py  delete_log_group.py  delete_ondemand_tester.py  export_log.py  ondemand-instance-checker.py
multinode_ondemand_checker/IaC/: get-ondemand-status-change.py  main.tf  role.tf
multinode_ondemand_checker/IaC-cloudwatchlogs/: main.tf
multinode_ondemand_checker/ami_az_data/: az_map_dict.pkl
multinode_spot_checker/: README.md  create_log_group.py  create_tester.py  delete_log_group.py  delete_tester.py  export_log.py  json_to_csv.py  spot-health-checker.py  variables.py.sample
multinode_spot_checker/IaC/: main.tf
multinode_spot_checker/aws/: README.md  check_instances.py  clean_spot_instances.py  create_log_group.py  export_log.py  (+13 more)
optimized-period-evaluation/: period-evaluation.py  preprocessing.py  price_data.csv
(+188 files in other folders)
