[project]
name = "spot-checker"
version = "2.0.0"
description = "AWS Spot Instance availability checker and health monitor with multi-node support"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "DDPS Lab" }
]

dependencies = [
    "boto3>=1.28.0",
    "pandas>=1.5.0",
    "pytz>=2023.3",
    "variables>=0.0.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.uv]
# Project-relative dependency resolution
resolution = "highest"
